# todobackend-haskell

./: .gitignore  .travis.yml  Makefile  README.md  circle.yml  sloppy.json  stack.yaml
docker/: Dockerfile-happstack  Dockerfile-scotty  Dockerfile-servant  Dockerfile-snap  Dockerfile-spock  Dockerfile-yesod
todobackend-common/: todobackend-common.cabal
todobackend-common/src/TodoBackend/: Model.hs  Utils.hs
todobackend-happstack/: todobackend-happstack.cabal
todobackend-happstack/src/: Main.hs
todobackend-scotty/: README.md  todobackend-scotty.cabal
todobackend-scotty/src/: Main.hs
todobackend-servant/: README.md  todobackend-servant.cabal
todobackend-servant/src/: Main.hs
todobackend-snap/: todobackend-snap.cabal
todobackend-snap/src/: Main.hs
todobackend-spock/: todobackend-spock.cabal
todobackend-spock/src/: Main.hs
todobackend-yesod/: todobackend-yesod.cabal
todobackend-yesod/src/: Main.hs
