name:                todobackend-servant
version:             0.1.0.0
synopsis:            Todobackend implementation using Servant
description:         Please see README.md
license:             MIT
license-file:        LICENSE
author:              Joel Hermanns
maintainer:          joel.hermanns@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable todobackend-servant
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.6 && <5
                     , either
                     , mtl
                     , persistent-sqlite
                     , servant >= 0.12
                     , servant-server >= 0.12
                     , todobackend-common
                     , transformers
                     , wai
                     , warp
  hs-source-dirs:      src
  default-language:    Haskell2010
